crates/rymx/tests/snapshots/full__main@mini__hello_world.rym.snap
---
source: crates/rymx/tests/full.rs
expression: diag.outputs_dump() + &diag.reports_dump()
input_file: crates/rymx/tests/mini/hello_world.rym
---
--- tokenize ---
Const [const]
HSpace [ ]
Ident [main]
HSpace [ ]
Assign [=]
HSpace [ ]
Ident [fn]
ParenOpen [(]
ParenClose [)]
HSpace [ ]
Assign [=]
GreaterThan [>]
HSpace [ ]
Ident [println]
ParenOpen [(]
String [\"Hello World!\"]
ParenClose [)]
Semi [;]
VSpace [\n]

--- parse ---

--- reports ---
Error: 
   ╭─[/home/simon/dev/rym/crates/rymx/tests/mini/hello_world.rym:1:1]
   │
 1 │ const main = fn() => println("Hello World!");
   │                ┬  
   │                ╰── ExpectedFound { expected: [], found: Some(ParenOpen) }
───╯

